# OOP

./: CMakeLists.txt  README.md  main.cpp
App/: Application.cpp  Application.hpp  Application_fwd.hpp
App/CLI/: Controller.cpp  Controller.hpp
App/CLI/Parser/: Parser.cpp  Parser.hpp
App/Common/Controller/: ControllerBase.hpp
App/Common/Exception/: Exception.hpp
App/Director/: Director.cpp  Director.hpp
App/Director/Actions/: Action.hpp  AddItemAction.cpp  AddItemAction.hpp  AddSlideAction.cpp  AddSlideAction.hpp  DelItemAction.cpp  DelItemAction.hpp  DelSlideAction.cpp  DelSlideAction.hpp
App/Document/: Document.cpp  Document.hpp  Item.cpp  Item.hpp  Slide.cpp  Slide.hpp
App/Document/Shape/: Rectangle.cpp  Rectangle.hpp  Shape.hpp  ShapeStorage.hpp
App/GUI/: Controller.cpp  Controller.hpp
App/IO/: IOManager.cpp  IOManager.hpp
App/Interpreter/: Interpreter.cpp  Interpreter.hpp
App/Interpreter/Command/: AddCommand.cpp  AddCommand.hpp  ChangeCommand.hpp  Command.hpp  DisplayCommand.cpp  DisplayCommand.hpp  ExitCommand.hpp  ListCommand.cpp  ListCommand.hpp  LoadCommand.hpp  NullCommand.cpp  NullCommand.hpp  RemoveCommand.hpp  SaveCommand.hpp
App/Interpreter/Parser/: Parser.cpp  Parser.hpp
App/Rendering/: ITextualDsiplayable.hpp  Render.cpp  Render.hpp
App/Rendering/Shapes/: IShape.hpp  ITextualDsiplayable.hpp  IVisualDisplayable.hpp  ShapeBase.cpp  ShapeBase.hpp  ShapeRectangle.cpp  (+1 more)
App/Serialization/: JsonSerializer.cpp  JsonSerializer.hpp  Serializable.hpp
App/Utils/: Exception.hpp  helpers.cpp  helpers.hpp  helpers.impl.hpp
(+31 files in other folders)
